Added Mode Switching FreeRTOS Driver

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -108,6 +108,8 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/switch_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/comm_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/LCD_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/ADC_task.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/mswitch_task.o
+
 #-----------------#
 
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/display.o
