LCD brightness and buzzer implemented

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -120,6 +120,7 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/LCD_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/ADC_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/mswitch_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/sd_task.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/buzzer_task.o
 
 #-----------------#
 
