Added ohm sybmol, added initial scrolling menu

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -112,6 +112,7 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/tasks.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/uartstdio.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/ustdlib.o
 
+
 #------TASKS------#
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/led_task.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/switch_task.o
@@ -137,6 +138,9 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/display_functions.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/uart.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/general_functions.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/sd_card.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/spi_adc.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/menu.o
+
 
 ${COMPILER}/$(PROJECT).axf: ${ROOT}/driverlib/${COMPILER}/libdriver.a
 ${COMPILER}/$(PROJECT).axf: $(PROJECT).ld
