Add new ac refactoring and simplification

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -118,6 +118,7 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/general_functions.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/sd_card.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/spi_adc.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/menu.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/ac.o
 
 
 ${COMPILER}/$(PROJECT).axf: ${ROOT}/driverlib/${COMPILER}/libdriver.a
