Refactor SD card code into mswitch_helper

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -119,7 +119,7 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/sd_card.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/spi_adc.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/menu.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/ac.o
-
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/mswitch_helper.o
 
 ${COMPILER}/$(PROJECT).axf: ${ROOT}/driverlib/${COMPILER}/libdriver.a
 ${COMPILER}/$(PROJECT).axf: $(PROJECT).ld
