--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -121,6 +121,11 @@ ${COMPILER}/$(PROJECT).axf: ${COMPILER}/menu.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/ac.o
 ${COMPILER}/$(PROJECT).axf: ${COMPILER}/mswitch_helper.o
 
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/voltage.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/current.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/resistance.o
+${COMPILER}/$(PROJECT).axf: ${COMPILER}/mode_functions.o
+
 ${COMPILER}/$(PROJECT).axf: ${ROOT}/driverlib/${COMPILER}/libdriver.a
 ${COMPILER}/$(PROJECT).axf: $(PROJECT).ld
 
